Added an update system Added Dialog (file conflict and help) Added dokuJClient library (for help dialog) Added some settings Fixed many scraper issue Fixed build script Fixed scrapper language change Fixed empty search
And many more stuff